k3s_cluster/base/dmz/media/autobrr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  namespace: dmz
  labels:
    app: dmz-media-autobrr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dmz-media-autobrr
  template:
    metadata:
      labels:
        app: dmz-media-autobrr
    spec:
      tolerations:
        - key: node.kubernetes.io/not-ready
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 10
        - key: node.kubernetes.io/unreachable
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 10
      containers:
        - name: autobrr
          image: ghcr.io/autobrr/autobrr:latest
          imagePullPolicy: IfNotPresent
          # restartPolicy: Always
          ports:
            - containerPort: 7474
              name: web
          volumeMounts:
            - name: media-storage
              mountPath: /config
              subPath: autobrr/config
      volumes:
        - name: media-storage
          persistentVolumeClaim:
            claimName: media-pvc
