k3s_cluster/base/dmz/media/autobrr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: dmz
  labels:
    app: dmz-media-autobrr
spec:
  type: ClusterIP
  selector:
    app: dmz-media-autobrr
  ports:
    - name: web
      protocol: TCP
      port: 6665
      targetPort: 7474
